k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsp-web
  labels:
    app: dsp
spec:
  type: ClusterIP
  selector:
    app: dsp
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
